--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -99,14 +99,14 @@ Schimmer et al., 2015). These considerations resulted into
 transformative agreements\footnote{In this paper I use the term
   ``transformative agreement'', addressing also offsetting,
   read-and-publish or publish-and-read deals, and other variants
-  (Borrego et al., 2020; Hinchliffe, 2019). Although the term is
+  (Borrego et al., 2021; Hinchliffe, 2019). Although the term is
   critised as misleading and not useful to describe the different types
   of open access agreements between library consortia and commercial
   publishers (Babini et al., 2022), it is widely used in policy
   discussions and in the research literature.}, which cover a broad
 range of contracts between library consortia and publishers from
 mid-2010s onwards where institutional spending for subscriptions and
-open access publishing are considered together (Borrego et al., 2020;
+open access publishing are considered together (Borrego et al., 2021;
 Hinchliffe, 2019). Transformative agreements seek to control costs while
 allowing a transitional phase for publishing more open access articles.
 Similar to big deals, transformative agreements mainly bundle hybrid and
@@ -298,7 +298,7 @@ snapshot for the five-year period 2018 to 2022 according to the issued
 date, representing the earliest known publication date. Because Crossref
 metadata lacked information to distinguish between original research
 articles including review and other types of journal content, which are
-often not covered by transformative agreements (Borrego et al., 2020),
+often not covered by transformative agreements (Borrego et al., 2021),
 only articles published in regular issues indicated by non-numeric
 pagination were included. Furthermore, an expanded version of
 Unpaywall's paratext recognition approach was applied to exclude
@@ -343,7 +343,7 @@ access journals.
 Affiliation metadata about corresponding authors are crucial for the
 planning and evaluation of transformative agreements, because they are
 considered to be responsible to arrange open access publication (Borrego
-et al., 2020; Geschuhn \& Stone, 2017; Schimmer et al., 2015). Here,
+et al., 2021; Geschuhn \& Stone, 2017; Schimmer et al., 2015). Here,
 country and institutional affiliations were retrieved from OpenAlex.
 However, because of low coverage in OpenAlex, this study focused on
 first authors and their affiliations instead. First authors typically
@@ -766,21 +766,21 @@ market concentration. Specifically, the three largest commercial
 publishers Elsevier, Springer Nature, and Wiley dominate, particularly
 in regard to open access provided through transformative agreements.
 Together, the three publishers accounted for three-fourths of open
-access articles through transformative agreements, despite publishing
-less than half of the total publication volume published between 2018
-and 2022. This observation aligns with previous research on shifts in
-the publishing market following the introduction of funding
-opportunities for hybrid open access (Butler et al., 2023; Jahn \&
-Tullney, 2016; Shu \& Larivière, 2023). Additionally, the results
-confirm previously observed variations by publisher, with Elsevier
-exhibiting a different development than Springer Nature and Wiley
-(Butler et al., 2023; Jahn et al., 2022). However, it must be noted that
-the focus of transformative agreements on publishers with large hybrid
-journal portfolios is intentional (Campbell et al., 2022). Because of
-transformative agreements with a few large publishers, national
-consortia were able to substantially increase their country's annual
-open access article volume (Bosman, Jonge, et al., 2021; Huang et al.,
-2020; Pinhasi et al., 2021; Taubert et al., 2023; Wenaas, 2022).
+access articles through transformative agreements, while recording less
+than half of total publication volume published between 2018 and 2022.
+This observation aligns with previous research on shifts in the
+publishing market following the introduction of funding opportunities
+for hybrid open access (Butler et al., 2023; Jahn \& Tullney, 2016; Shu
+\& Larivière, 2023). Additionally, the results confirm previously
+observed variations by publisher, with Elsevier exhibiting a different
+development than Springer Nature and Wiley (Butler et al., 2023; Jahn et
+al., 2022). However, it must be noted that the focus of transformative
+agreements on publishers with large hybrid journal portfolios is
+intentional (Campbell et al., 2022). Because of transformative
+agreements with a few large publishers, national consortia were able to
+substantially increase their country's annual open access article volume
+(Bosman, Jonge, et al., 2021; Huang et al., 2020; Pinhasi et al., 2021;
+Taubert et al., 2023; Wenaas, 2022).
 
 Moreover, this study presents varying levels of open access uptake
 through transformative agreements across journals, which can be
@@ -824,16 +824,17 @@ access.
 
 But open access uptake also differs among OECD countries. In the United
 States, for example, hybrid open access including transformative
-agreements plays a lesser role compared to some European countries. The
-smallest share of federally funded research was hybrid open access
-between 2017 and 2021 (Schares, 2023). While some university consortia
-like the California Digital Library signed transformative agreements,
-others attempt to depart from big deals and unbundle large journal
-portfolios to address cost increases (Brainard, 2021; Schares, 2022).
-Despite the relatively low penetration of transformative agreements in
-China and the United States compared to Europe, 22\% of open access in
-hybrid journals in 2022 originates from these two countries, indicating
-the availability of funding sources for publication fees.
+agreements plays a lesser role compared to some European countries.
+Between 2017 and 2021, hybrid open access contributed the least to make
+federally funded research articles openly available (Schares, 2023).
+While some university consortia like the California Digital Library have
+signed transformative agreements, others attempt to depart from big
+deals and unbundle large journal portfolios to address cost increases
+(Brainard, 2021; Schares, 2022). Despite the relatively low penetration
+of transformative agreements in China and the United States compared to
+Europe, 22\% of open access in hybrid journals in 2022 originates from
+these two countries, indicating the availability of funding sources for
+publication fees.
 
 This large-scale study provides first empricial evidence about the
 influence of transformative agreements on the transition of hybrid
@@ -841,13 +842,13 @@ journals to full open access. However, several limitations needs to be
 acknowledged. From a data perspective, estimations of open access
 through transformative agreements were established by linking first
 author affiliations with publicly available agreement data from
-cOAlition S, and not through invoicing data because these data a usually
-not shared by publishers. Moreover, this study is unable to account for
-the various types of transformative agreements, particularly with
-regards to article types and capping. Similarly, assessing the quality
-of the OpenAlex and Crossref data used, particularly in terms of
-affiliations and article types, in comparison with established
-bibliometric databases was beyond the scope of this analysis. Overall,
+cOAlition S, and not through invoicing data, which is usually not
+shared. Moreover, this study is unable to account for the various types
+of transformative agreements, particularly with regards to article types
+and capping. Furthermore, assessing the quality of the OpenAlex and
+Crossref data used, particularly in terms of affiliations and article
+types, by comparing it with established bibliometric databases such as
+Scopus or Web of Science was beyond the scope of this analysis. Overall,
 the methodology is designed in such a way that the results underestimate
 rather than overestimate the adoption of open access through
 transformative agreements. In addition, the data used in this study are
@@ -855,15 +856,19 @@ openly available, along with the code used for this analysis.
 
 Additionally, it must be noted that the study period was significantly
 impacted by the COVID-19 pandemic, which led to an unprecedented number
-of publications as well as restrictions on migration flows, which could
-have influenced the country-specific results (Aviv-Reuven \& Rosenfeld,
-2021; Zhao et al., 2023). Furthermore, the study design did not consider
-emerging publication practices such as preprints (Fraser et al., 2021)
-and questionable special issues (Hanson et al., 2023), which have grown
-particularly rapidly since 2020. Lastly, it should be emphasized that
-the study aims to estimate articles enabled through transformative
-agreements but does not address financial shifts due to a lack of data
-on expenditures.
+of publications as well as an reduction of international collaboration
+(Aviv-Reuven \& Rosenfeld, 2021), which could explain the observed
+contrasting developements in OECD and BRICS countries. Even before the
+pandemic, growth in publications in Europe were only due to
+internationally co-authored journal articles (Kwiek, 2021). Likewise,
+inflows from China to the US and European countries already declined
+before 2020 (Zhao et al., 2023). Furthermore, the study design did not
+consider emerging publication practices such as preprints (Fraser et
+al., 2021) and special issues (Hanson et al., 2023), which have grown
+rapidly since 2020. Lastly, it should be emphasized that the study did
+not address financial shifts between suscriptiuons spending and open
+acces spayemnts while analysing hybrid open access through
+transformative agreements due to a lack of data on expenditures.
 
 This present study allows multiple strands of further research. One is
 to complement this large-scale study with more specific evidence from
@@ -875,26 +880,25 @@ upon the presented study design and incorporate subscription and open
 access expenditures to evaluate the cost-effectiveness of transformative
 agreements.
 
-But the study also has practival implications for research funders and
-libraries. Of primary concern should be observed differences across
+This study also has practival implications for research funders and
+libraries. Of primary concern should be the observed differences across
 countries, in particular the relationship between economic development
 and open access adoption. From a data perspective, the reporting of open
-access funding is not harmonised, but often crowd-sourced from various
-sources. To improve the assessment of transformative agreements,
-libraries and publishers could contribute by providing information about
-respective journal portfolios, participating institutions and open
-access invoicing.
+access funding including transformative agreements is not harmonised,
+but often crowd-sourced from various sources. To improve the assessment
+of transformative agreements, libraries and publishers could agree on
+standards and services to publicly share information about respective
+journal portfolios, participating institutions and open access
+invoicing.
 
-In summary, the aim of this study was to provide empirical insights into
-the developement of hybrid open access following the introduction of
-transformative agreements. The results are important for both
-researchers and stakeholders engaged in negotiating and evaluating these
-agreements. The presented approach relies on open data, which enables
-follow-up studies and open access monitoring acitvties to further
-explore the role of transformative agreements in facilitating the shift
-towards full open access in academic publishing.
-
---\textgreater{}
+In summary, this study provides empirical insights into the developement
+of hybrid open access following the introduction of transformative
+agreements. The results are important for both researchers and
+stakeholders engaged in negotiating and evaluating these agreements. The
+presented approach relies on open data, which enables follow-up studies
+and open access monitoring acitvties to further explore the role of
+transformative agreements in transitioning academic publishing to full
+and equitable open access.
 
 \hypertarget{references}{%
 \section*{References}\label{references}}
@@ -948,23 +952,24 @@ publishing: A review. \emph{Learned Publishing}, \emph{36}(3), 359--378.
 \url{https://doi.org/10.1002/leap.1558}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Borrego_2020}{}}%
-Borrego, Á., Anglada, L., \& Abadal, E. (2020). Transformative
+Borrego, Á., Anglada, L., \& Abadal, E. (2021). Transformative
 agreements: Do they pave the way to open access? \emph{Learned
-Publishing}. \url{https://doi.org/10.1002/leap.1347}
+Publishing}, \emph{34}(2), 216--232.
+\url{https://doi.org/10.1002/leap.1347}
 
 \leavevmode\vadjust pre{\hypertarget{ref-bosman_2021_4558704}{}}%
 Bosman, J., Frantsvåg, J. E., Kramer, B., Langlais, P.-C., \& Proudman,
-V. (2021). \emph{OA diamond journals study. Part 1: findings}. Zenodo.
+V. (2021). \emph{{OA Diamond Journals Study}. Part 1: findings}. Zenodo.
 \url{https://doi.org/10.5281/zenodo.4558704}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Bosman_2021}{}}%
 Bosman, J., Jonge, H. de, Kramer, B., \& Sondervan, J. (2021). Advancing
-open access in the netherlands after 2020: From quantity to quality.
+open access in the {Netherlands} after 2020: From quantity to quality.
 \emph{Insights the UKSG Journal}, \emph{34}.
 \url{https://doi.org/10.1629/uksg.545}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Brainard_2021}{}}%
-Brainard, J. (2021). California universities and elsevier make up, ink
+Brainard, J. (2021). California universities and {Elsevier} make up, ink
 big open-access deal. \emph{Science}.
 \url{https://doi.org/10.1126/science.abi5505}
 
@@ -996,7 +1001,8 @@ Dallmeier-Tiessen, S., Goerner, B., Darby, R., Hyppoelae, J.,
 Igo-Kemenes, P., Kahn, D., Lambert, S., Lengenfelder, A., Leonard, C.,
 Mele, S., Polydoratou, P., Ross, D., Ruiz-Perez, S., Schimmer, R.,
 Swaisland, M., \& Stelt, W. van der. (2010). \emph{{Open Access
-Publishing - Models and Attributes}} (T. S. consortium, Ed.).
+Publishing - Models and Attributes}}. The SOAP consortium.
+\url{https://hdl.handle.net/11858/00-001M-0000-0013-838A-6}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Fraser_2021}{}}%
 Fraser, N., Brierley, L., Dey, G., Polka, J. K., Pálfy, M., Nanni, F.,
@@ -1008,7 +1014,7 @@ communication landscape. \emph{PLOS Biology}, \emph{19}(4), e3000959.
 \leavevmode\vadjust pre{\hypertarget{ref-Fraser_2023}{}}%
 Fraser, N., Hobert, A., Jahn, N., Mayr, P., \& Peters, I. (2023). No
 deal: German researchers' publishing and citing behaviors after big deal
-negotiations with elsevier. \emph{Quantitative Science Studies},
+negotiations with {Elsevier}. \emph{Quantitative Science Studies},
 \emph{4}(2), 325--352. \url{https://doi.org/10.1162/qss_a_00255}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Geschuhn_2017}{}}%
@@ -1024,7 +1030,7 @@ Hanson, M. A., Barreiro, P. G., Crosetto, P., \& Brockington, D. (2023).
 
 \leavevmode\vadjust pre{\hypertarget{ref-Haucap_2021}{}}%
 Haucap, J., Moshgbar, N., \& Schmal, W. B. (2021). The impact of the
-german {``DEAL''} on competition in the academic publishing market.
+{German {``DEAL''}} on competition in the academic publishing market.
 \emph{Managerial and Decision Economics}, \emph{42}(8), 2027--2049.
 \url{https://doi.org/10.1002/mde.3493}
 
@@ -1047,13 +1053,13 @@ reclassifying open access information in OpenAlex}. Blog post.
 \leavevmode\vadjust pre{\hypertarget{ref-Jahn_2021}{}}%
 Jahn, N., Matthias, L., \& Laakso, M. (2022). Toward transparency of
 hybrid open access through publisher-provided metadata: An article-level
-study of elsevier. \emph{Journal of the Association for Information
+study of {Elsevier}. \emph{Journal of the Association for Information
 Science and Technology}, \emph{73}(1), 104--118.
 \url{https://doi.org/10.1002/asi.24549}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Jahn_2016}{}}%
 Jahn, N., \& Tullney, M. (2016). A study of institutional spending on
-open access publication fees in germany. \emph{{PeerJ}}, \emph{4},
+open access publication fees in {Germany}. \emph{{PeerJ}}, \emph{4},
 e2323. \url{https://doi.org/10.7717/peerj.2323}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Jubb_2017}{}}%
@@ -1074,10 +1080,17 @@ on stratification in open access publishing. \emph{Quantitative Science
 Studies}, \emph{4}(1), 22--43. \url{https://doi.org/10.1162/qss_a_00245}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Koley_2023}{}}%
-Koley, M., \& Lala, K. (2023). Limitations of the {``indian one nation,
-one subscription''} policy proposal and a way forward. \emph{Journal of
+Koley, M., \& Lala, K. (2023). Limitations of the {{``Indian one nation,
+one subscription''}} policy proposal and a way forward. \emph{Journal of
 Librarianship and Information Science}, 096100062211467.
 \url{https://doi.org/10.1177/09610006221146771}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Kwiek_2020}{}}%
+Kwiek, M. (2021). What large-scale publication and citation data tell us
+about international research collaboration in europe: Changing national
+patterns in global contexts. \emph{Studies in Higher Education},
+\emph{46}(12), 2629--2649.
+\url{https://doi.org/10.1080/03075079.2020.1749254}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Laakso_2016}{}}%
 Laakso, M., \& Björk, B.-C. (2016). Hybrid open access--a longitudinal
@@ -1103,7 +1116,7 @@ plan. \emph{Nature}, \emph{623}(7986), 238--240.
 
 \leavevmode\vadjust pre{\hypertarget{ref-Marques_2020}{}}%
 Marques, M., \& Stone, G. (2020). Transitioning to open access: An
-evaluation of the {UK} springer compact agreement pilot 2016--2018.
+evaluation of the {UK} {Springer Compact} agreement pilot 2016--2018.
 \emph{College {\&} Research Libraries}, \emph{81}(6), 913--927.
 \url{https://doi.org/10.5860/crl.81.6.913}
 
@@ -1121,7 +1134,7 @@ scholar: A large-scale analysis. \emph{Journal of Informetrics},
 
 \leavevmode\vadjust pre{\hypertarget{ref-Marwick_2018}{}}%
 Marwick, B., Boettiger, C., \& Mullen, L. (2018). Packaging data
-analytical work reproducibly using r (and friends). \emph{The American
+analytical work reproducibly using {R} (and friends). \emph{The American
 Statistician}, \emph{72}(1), 80--88.
 \url{https://doi.org/10.1080/00031305.2017.1375986}
 
@@ -1139,13 +1152,12 @@ or reality? \emph{{ScienceOpen} Research}.
 Mittermaier, B. (2021). {Rolle des Open Access Monitor Deutschland bei
 der Antragstellung im DFG-Förderprogramm
 Open-Access-Publikationskosten}. \emph{{O-Bib. Das Offene
-Bibliotheksjournal / Herausgeber VDB}}, \emph{8}.
-\url{https://doi.org/10.5282/O-BIB/5731}
+Bibliotheksjournal}}, \emph{8}. \url{https://doi.org/10.5282/O-BIB/5731}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Momeni_2023}{}}%
 Momeni, F., Dietze, S., Mayr, P., Biesenbender, K., \& Peters, I.
 (2023). Which factors are associated with open access publishing? A
-springer nature case study. \emph{Quantitative Science Studies},
+{Springer Nature} case study. \emph{Quantitative Science Studies},
 \emph{4}(2), 353--371. \url{https://doi.org/10.1162/qss_a_00253}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Momeni_2021}{}}%
@@ -1164,7 +1176,7 @@ Transformative agreements in the development of open access.
 Muñoz-Vélez, H., Pallares, C., Echavarría, A. F., Contreras, J., Pavas,
 A., Bello, D., Rendón, C., Calderón-Rojas, J., \& Garzón, F. (2024).
 Strategies for negotiating and signing transformative agreements in the
-global south: The colombia consortium experience. \emph{Journal of
+{Global South}: The {Colombia Consortium} experience. \emph{Journal of
 Library Administration}, \emph{64}(1), 80--98.
 \url{https://doi.org/10.1080/01930826.2023.2287945}
 
@@ -1269,8 +1281,8 @@ publishing. \emph{Scientometrics}, \emph{129}(1), 519--536.
 
 \leavevmode\vadjust pre{\hypertarget{ref-Taubert_2023}{}}%
 Taubert, N., Hobert, A., Jahn, N., Bruns, A., \& Iravani, E. (2023).
-Understanding differences of the OA uptake within the german university
-landscape (2010--2020): Part 1---journal-based OA.
+Understanding differences of the OA uptake within the {German}
+university landscape (2010--2020): Part 1---journal-based OA.
 \emph{Scientometrics}, \emph{128}(6), 3601--3625.
 \url{https://doi.org/10.1007/s11192-023-04716-3}
 
