--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -35,18 +35,18 @@
  year={2016},
  month=jun, pages={417–435} }
 
-@article{Jahn_2021, title={Toward transparency of hybrid open access through publisher-provided metadata: An article-level study of Elsevier}, volume={73}, ISSN={2330-1643}, url={http://dx.doi.org/10.1002/asi.24549}, DOI={10.1002/asi.24549}, number={1}, journal={Journal of the Association for Information Science and Technology}, publisher={Wiley}, author={Jahn, Najko and Matthias, Lisa and Laakso, Mikael}, year={2022}, month=jul, pages={104--118} }
+@article{Jahn_2021, title={Toward transparency of hybrid open access through publisher-provided metadata: An article-level study of {Elsevier}}, volume={73}, ISSN={2330-1643}, url={http://dx.doi.org/10.1002/asi.24549}, DOI={10.1002/asi.24549}, number={1}, journal={Journal of the Association for Information Science and Technology}, publisher={Wiley}, author={Jahn, Najko and Matthias, Lisa and Laakso, Mikael}, year={2022}, month=jul, pages={104--118} }
 
-@article{Taubert_2023, title={Understanding differences of the OA uptake within the German university landscape (2010–2020): part 1—journal-based OA}, volume={128}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-023-04716-3}, DOI={10.1007/s11192-023-04716-3}, number={6}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Taubert, Niels and Hobert, Anne and Jahn, Najko and Bruns, Andre and Iravani, Elham}, year={2023}, month=may, pages={3601–3625} }
+@article{Taubert_2023, title={Understanding differences of the OA uptake within the {German} university landscape (2010–2020): part 1—journal-based OA}, volume={128}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-023-04716-3}, DOI={10.1007/s11192-023-04716-3}, number={6}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Taubert, Niels and Hobert, Anne and Jahn, Najko and Bruns, Andre and Iravani, Elham}, year={2023}, month=may, pages={3601–3625} }
 
-@article{Haucap_2021, title={The impact of the German “DEAL” on competition in the academic publishing market}, volume={42}, ISSN={1099-1468}, url={http://dx.doi.org/10.1002/mde.3493}, DOI={10.1002/mde.3493}, number={8}, journal={Managerial and Decision Economics}, publisher={Wiley}, author={Haucap, Justus and Moshgbar, Nima and Schmal, W. Benedikt}, year={2021}, month=nov, pages={2027–2049} }
+@article{Haucap_2021, title={The impact of the {German “DEAL”} on competition in the academic publishing market}, volume={42}, ISSN={1099-1468}, url={http://dx.doi.org/10.1002/mde.3493}, DOI={10.1002/mde.3493}, number={8}, journal={Managerial and Decision Economics}, publisher={Wiley}, author={Haucap, Justus and Moshgbar, Nima and Schmal, W. Benedikt}, year={2021}, month=nov, pages={2027–2049} }
 
 @article{Huang_2020, title={Evaluating the impact of open access policies on research institutions}, volume={9}, ISSN={2050-084X}, url={http://dx.doi.org/10.7554/eLife.57067}, DOI={10.7554/elife.57067}, journal={eLife}, publisher={eLife Sciences Publications, Ltd}, author={Huang, Chun-Kai (Karl) and Neylon, Cameron and Hosking, Richard and Montgomery, Lucy and Wilson, Katie S and Ozaygen, Alkim and Brookes-Kenworthy, Chloe}, year={2020}, month=sep }
 
 @article{P_l_nen_2020, title={Open access at the national level: A comprehensive analysis of publications by Finnish researchers}, volume={1}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00084}, DOI={10.1162/qss_a_00084}, number={4}, journal={Quantitative Science Studies}, publisher={MIT Press - Journals}, author={Pölönen, Janne and Laakso, Mikael and Guns, Raf and Kulczycki, Emanuel and Sivertsen, Gunnar}, year={2020}, month=dec, pages={1396–1428} }
 
 @article{Wenaas_2022, title={Choices of immediate open access and the relationship to journal ranking and publish-and-read deals}, volume={7}, ISSN={2504-0537}, url={http://dx.doi.org/10.3389/frma.2022.943932}, DOI={10.3389/frma.2022.943932}, journal={Frontiers in Research Metrics and Analytics}, publisher={Frontiers Media SA}, author={Wenaas, Lars}, year={2022}, month=oct }
-@article{Marwick_2018, title={Packaging Data Analytical Work Reproducibly Using R (and Friends)}, volume={72}, url={http://dx.doi.org/10.1080/00031305.2017.1375986}, DOI={10.1080/00031305.2017.1375986}, number={1}, journal={The American Statistician}, publisher={Informa UK Limited}, author={Marwick, Ben and Boettiger, Carl and Mullen, Lincoln}, year={2018}, pages={80--88} }
+@article{Marwick_2018, title={Packaging Data Analytical Work Reproducibly Using {R} (and Friends)}, volume={72}, url={http://dx.doi.org/10.1080/00031305.2017.1375986}, DOI={10.1080/00031305.2017.1375986}, number={1}, journal={The American Statistician}, publisher={Informa UK Limited}, author={Marwick, Ben and Boettiger, Carl and Mullen, Lincoln}, year={2018}, pages={80--88} }
 
  @article{Butler_2023, title={The oligopoly’s shift to open access: How the big five academic publishers profit from article processing charges}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00272}, DOI={10.1162/qss_a_00272}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Butler, Leigh-Ann and Matthias, Lisa and Simard, Marc-André and Mongeon, Philippe and Haustein, Stefanie}, year={2023}, month=dec, pages={1–22} }
 
@@ -58,7 +58,7 @@
 
 @article{Parmhed_2023, title={Transformative agreements and their practical impact: a librarian perspective}, volume={36}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.612}, DOI={10.1629/uksg.612}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Parmhed, Sara and Säll, Johanna}, year={2023} }
 
-@article{Momeni_2023, title={Which factors are associated with Open Access publishing? A Springer Nature case study}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00253}, DOI={10.1162/qss_a_00253}, number={2}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Momeni, Fakhri and Dietze, Stefan and Mayr, Philipp and Biesenbender, Kristin and Peters, Isabella}, year={2023}, pages={353–371} }
+@article{Momeni_2023, title={Which factors are associated with Open Access publishing? A {Springer Nature} case study}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00253}, DOI={10.1162/qss_a_00253}, number={2}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Momeni, Fakhri and Dietze, Stefan and Mayr, Philipp and Biesenbender, Kristin and Peters, Isabella}, year={2023}, pages={353–371} }
 
 @misc{priem2022openalex,
       title={OpenAlex: A fully-open index of scholarly works, authors, venues, institutions, and concepts}, 
@@ -72,11 +72,11 @@
 @techreport{Dallmeier_2010,
 title = {{Open Access Publishing - Models and Attributes}},
 author = {Dallmeier-Tiessen, Suenje and Goerner, Bettina and Darby, Robert and Hyppoelae, Jenni and Igo-Kemenes, Peter and Kahn, Deborah and Lambert, Simon and Lengenfelder, Anja and Leonard, Chris and Mele, Salvatore and Polydoratou, Panayiota and Ross, David and Ruiz-Perez, Sergio and Schimmer, Ralf and Swaisland, Mark and van der Stelt, Wim},
-editor = {The SOAP consortium},
+publisher = {The SOAP consortium},
 language = {eng},
 year = {2010},
 date = {2010},
-abstract = {{The SOAP (Study of Open Access Publishing) project has compiled data on the present offer for open access publishing in online peer-reviewed journals. Starting from the Directory of Open Access Journals, several sources of data are considered, including inspection of journal web site and direct inquiries within the publishing industry. Several results are derived and discussed, together with their correlations: the number of open access journals and articles; their subject area; the starting date of open access journals; the size and business models of open access publishers; the licensing models; the presence of an impact factor; the uptake of hybrid open access. In addition, a number of qualitative features of open access publishing, relevant to understand the present landscape, are described.}},
+url = {https://hdl.handle.net/11858/00-001M-0000-0013-838A-6}
 }
 
 @article{Sch_nfelder_2020, title={Article processing charges: Mirroring the citation impact or legacy of the subscription-based model?}, volume={1}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00015}, DOI={10.1162/qss_a_00015}, number={1}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Schönfelder, Nina}, year={2020}, month=feb, pages={6–27} }
@@ -88,7 +88,7 @@ abstract = {{The SOAP (Study of Open Access Publishing) project has compiled dat
 
 @article{Bj_rk_2017, title={Growth of hybrid open access, 2009–2016}, volume={5}, ISSN={2167-8359}, url={http://dx.doi.org/10.7717/peerj.3878}, DOI={10.7717/peerj.3878}, journal={PeerJ}, publisher={PeerJ}, author={ Bo-Christer Björk}, year={2017}, month=sep, pages={e3878} }
 
-@article{Fraser_2023, title={No deal: German researchers’ publishing and citing behaviors after Big Deal negotiations with Elsevier}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00255}, DOI={10.1162/qss_a_00255}, number={2}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Fraser, Nicholas and Hobert, Anne and Jahn, Najko and Mayr, Philipp and Peters, Isabella}, year={2023}, pages={325–352} }
+@article{Fraser_2023, title={No deal: German researchers’ publishing and citing behaviors after Big Deal negotiations with {Elsevier}}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00255}, DOI={10.1162/qss_a_00255}, number={2}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Fraser, Nicholas and Hobert, Anne and Jahn, Najko and Mayr, Philipp and Peters, Isabella}, year={2023}, pages={325–352} }
 
 @article{Schiltz_2018, title={Science without publication paywalls: cOAlition S for the realisation of full and immediate Open Access}, volume={16}, ISSN={1545-7885}, url={http://dx.doi.org/10.1371/journal.pbio.3000031}, DOI={10.1371/journal.pbio.3000031}, number={9}, journal={PLOS Biology}, publisher={Public Library of Science (PLoS)}, author={Schiltz, Marc}, year={2018}, month=sep, pages={e3000031} }
 
@@ -96,10 +96,9 @@ abstract = {{The SOAP (Study of Open Access Publishing) project has compiled dat
  doi = {10.5282/O-BIB/5731},
  author = {Mittermaier, Bernhard},
  title = {{Rolle des Open Access Monitor Deutschland bei der Antragstellung im DFG-Förderprogramm Open-Access-Publikationskosten}},
- journal = {{o-bib. Das offene Bibliotheksjournal / Herausgeber VDB}},
+ journal = {{o-bib. Das offene Bibliotheksjournal}},
  issue = 4,
  volume = 8,
- publisher = {{o-bib. Das offene Bibliotheksjournal}},
  year = {2021}}
  
  
@@ -116,7 +115,7 @@ abstract = {{The SOAP (Study of Open Access Publishing) project has compiled dat
 
 @misc{Brainard_2023, DOI={10.1126/science.adj3282}, author = {Jeffery Brainard}, journal={Science}, year={2023}, title = {‘Transformative’ journals get booted for switching to open access too slowly} }
 
-@article{Brainard_2021, title={California universities and Elsevier make up, ink big open-access deal}, ISSN={1095-9203}, url={http://dx.doi.org/10.1126/science.abi5505}, DOI={10.1126/science.abi5505}, journal={Science}, publisher={American Association for the Advancement of Science (AAAS)}, author={Brainard, Jeffrey}, year={2021}, month=mar }
+@article{Brainard_2021, title={California universities and {Elsevier} make up, ink big open-access deal}, ISSN={1095-9203}, url={http://dx.doi.org/10.1126/science.abi5505}, DOI={10.1126/science.abi5505}, journal={Science}, publisher={American Association for the Advancement of Science (AAAS)}, author={Brainard, Jeffrey}, year={2021}, month=mar }
 
 @article{Schares_2022, title={Unsub Extender: A Python-based web application for visualizing Unsub data}, volume={3}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00200}, DOI={10.1162/qss_a_00200}, number={3}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Schares, Eric}, year={2022}, pages={600–623} }
 
@@ -125,6 +124,8 @@ abstract = {{The SOAP (Study of Open Access Publishing) project has compiled dat
 @article{Zhao_2023, title={A gender perspective on the global migration of scholars}, volume={120}, ISSN={1091-6490}, url={http://dx.doi.org/10.1073/pnas.2214664120}, DOI={10.1073/pnas.2214664120}, number={10}, journal={Proceedings of the National Academy of Sciences}, publisher={Proceedings of the National Academy of Sciences}, author={Zhao, Xinyi and Akbaritabar, Aliakbar and Kashyap, Ridhi and Zagheni, Emilio}, year={2023}, month=feb }
 
 @article{Schares_2023, title={Impact of the 2022 OSTP memo: A bibliometric analysis of US federally funded publications, 2017–2021}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00237}, DOI={10.1162/qss_a_00237}, number={1}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Schares, Eric}, year={2023}, pages={1–21} }
+
+@article{Kwiek_2020, title={What large-scale publication and citation data tell us about international research collaboration in Europe: changing national patterns in global contexts}, volume={46}, ISSN={1470-174X}, url={http://dx.doi.org/10.1080/03075079.2020.1749254}, DOI={10.1080/03075079.2020.1749254}, number={12}, journal={Studies in Higher Education}, publisher={Informa UK Limited}, author={Kwiek, Marek}, year={2021}, month=apr, pages={2629–2649} }
 
 @article{Schiermeier_2018, title={China backs bold plan to tear down journal paywalls}, volume={564}, ISSN={1476-4687}, url={http://dx.doi.org/10.1038/d41586-018-07659-5}, DOI={10.1038/d41586-018-07659-5}, number={7735}, journal={Nature}, publisher={Springer Science and Business Media LLC}, author={Schiermeier, Quirin}, year={2018}, month=dec, pages={171–172} }
 
@@ -159,7 +160,7 @@ year = {2022}
                   Kramer, Bianca and
                   Langlais, Pierre-Carl and
                   Proudman, Vanessa},
-  title        = {OA Diamond Journals Study. Part 1: Findings},
+  title        = {{OA Diamond Journals Study}. Part 1: Findings},
   month        = mar,
   year         = 2021,
   publisher    = {Zenodo},
@@ -167,11 +168,11 @@ year = {2022}
   url          = {https://doi.org/10.5281/zenodo.4558704}
 }
 
-@article{Bosman_2021, title={Advancing open access in the Netherlands after 2020: from quantity to quality}, volume={34}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.545}, DOI={10.1629/uksg.545}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Bosman, Jeroen and de Jonge, Hans and Kramer, Bianca and Sondervan, Jeroen}, year={2021} }
+@article{Bosman_2021, title={Advancing open access in the {Netherlands} after 2020: from quantity to quality}, volume={34}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.545}, DOI={10.1629/uksg.545}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Bosman, Jeroen and de Jonge, Hans and Kramer, Bianca and Sondervan, Jeroen}, year={2021} }
 
-@article{Koley_2023, title={Limitations of the “Indian one nation, one subscription” policy proposal and a way forward}, ISSN={1741-6477}, url={http://dx.doi.org/10.1177/09610006221146771}, DOI={10.1177/09610006221146771}, journal={Journal of Librarianship and Information Science}, publisher={SAGE Publications}, author={Koley, Moumita and Lala, Kanchan}, year={2023}, month=jan, pages={096100062211467} }
+@article{Koley_2023, title={Limitations of the {“Indian one nation, one subscription”} policy proposal and a way forward}, ISSN={1741-6477}, url={http://dx.doi.org/10.1177/09610006221146771}, DOI={10.1177/09610006221146771}, journal={Journal of Librarianship and Information Science}, publisher={SAGE Publications}, author={Koley, Moumita and Lala, Kanchan}, year={2023}, month=jan, pages={096100062211467} }
 
- @article{Mu_oz_V_lez_2024, title={Strategies for Negotiating and Signing Transformative Agreements in the Global South: The Colombia Consortium Experience}, volume={64}, ISSN={1540-3564}, url={http://dx.doi.org/10.1080/01930826.2023.2287945}, DOI={10.1080/01930826.2023.2287945}, number={1}, journal={Journal of Library Administration}, publisher={Informa UK Limited}, author={Muñoz-Vélez, Hernán and Pallares, César and Echavarría, Andrés Felipe and Contreras, Julysa and Pavas, Andrés and Bello, David and Rendón, César and Calderón-Rojas, Jacqueline and Garzón, Fernando}, year={2024}, month=jan, pages={80–98} }
+ @article{Mu_oz_V_lez_2024, title={Strategies for Negotiating and Signing Transformative Agreements in the {Global South}: The {Colombia Consortium} Experience}, volume={64}, ISSN={1540-3564}, url={http://dx.doi.org/10.1080/01930826.2023.2287945}, DOI={10.1080/01930826.2023.2287945}, number={1}, journal={Journal of Library Administration}, publisher={Informa UK Limited}, author={Muñoz-Vélez, Hernán and Pallares, César and Echavarría, Andrés Felipe and Contreras, Julysa and Pavas, Andrés and Bello, David and Rendón, César and Calderón-Rojas, Jacqueline and Garzón, Fernando}, year={2024}, month=jan, pages={80–98} }
  
 %%%%
 @misc{OS_Monitor,
@@ -713,7 +714,7 @@ year = {2020}
      volume = {4}, 
      pages = {e2323}, 
      author = {Najko Jahn and Marco Tullney}, 
-     title = {A study of institutional spending on open access publication fees in Germany}, 
+     title = {A study of institutional spending on open access publication fees in {Germany}}, 
      journal = {{PeerJ}}
     }
 
@@ -829,16 +830,7 @@ year = {2020}
   journal = {{ScienceOpen} Research}
 }
 
-@article{Borrego_2020, 
-  doi = {10.1002/leap.1347}, 
-  url = {https://doi.org/10.1002%2Fleap.1347}, 
-  year = 2020, 
-  month = {dec}, 
-  publisher = {Wiley}, 
-  author = {Ángel Borrego and Lluís Anglada and Ernest Abadal}, 
-  title = {Transformative agreements: Do they pave the way to open access?}, 
-  journal = {Learned Publishing}
-}
+@article{Borrego_2020, title={Transformative agreements: Do they pave the way to open access?}, volume={34}, ISSN={1741-4857}, url={http://dx.doi.org/10.1002/leap.1347}, DOI={10.1002/leap.1347}, number={2}, journal={Learned Publishing}, publisher={Wiley}, author={Borrego, Ángel and Anglada, Lluís and Abadal, Ernest}, year={2021}, month=dec, pages={216–232} }
 
 @misc{Hinchliffe_2019,
   author = {Lisa Janicke Hinchliffe},
@@ -1022,6 +1014,6 @@ associated authors}},
 	number = {6},
 	pages = {913--927},
 	author = {Mafalda Marques and Graham Stone},
-	title = {Transitioning to Open Access: An Evaluation of the {UK} Springer Compact Agreement Pilot 2016--2018},
+	title = {Transitioning to Open Access: An Evaluation of the {UK} {Springer Compact} Agreement Pilot 2016--2018},
 	journal = {College {\&} Research Libraries}
 }
